syntax = "proto3";

package user;

option go_package = "api-user-crud-go/proto";

// ==========================================
// MESSAGE DEFINITIONS
// ==========================================

// UserMessage merepresentasikan data user dalam gRPC.
message UserMessage {
  uint32 id    = 1;
  string name  = 2;
  string email = 3;
  int32  age   = 4;
}

// CreateUserRequest adalah request untuk membuat user baru.
message CreateUserRequest {
  string name  = 1;
  string email = 2;
  int32  age   = 3;
}

// UpdateUserRequest adalah request untuk mengupdate user.
message UpdateUserRequest {
  uint32 id    = 1;
  string name  = 2;
  string email = 3;
  int32  age   = 4;
}

// GetUserRequest adalah request untuk mendapatkan user berdasarkan ID.
message GetUserRequest {
  uint32 id = 1;
}

// DeleteUserRequest adalah request untuk menghapus user.
message DeleteUserRequest {
  uint32 id = 1;
}

// GetAllUsersRequest adalah request untuk mendapatkan semua user.
message GetAllUsersRequest {}

// GetAllUsersResponse adalah response berisi daftar user.
message GetAllUsersResponse {
  repeated UserMessage users = 1;
}

// DeleteUserResponse adalah response setelah menghapus user.
message DeleteUserResponse {
  string message = 1;
}

// ==========================================
// SERVICE DEFINITION
// ==========================================

// UserService mendefinisikan RPC methods untuk User CRUD.
service UserService {
  // CreateUser membuat user baru.
  rpc CreateUser(CreateUserRequest) returns (UserMessage);

  // GetAllUsers mengambil semua user.
  rpc GetAllUsers(GetAllUsersRequest) returns (GetAllUsersResponse);

  // GetUser mengambil user berdasarkan ID.
  rpc GetUser(GetUserRequest) returns (UserMessage);

  // UpdateUser mengupdate data user.
  rpc UpdateUser(UpdateUserRequest) returns (UserMessage);

  // DeleteUser menghapus user berdasarkan ID.
  rpc DeleteUser(DeleteUserRequest) returns (DeleteUserResponse);
}
